feat(metrics): add Prometheus API instrumentation
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>