@@ -1,18 +1,27 @@
 package org.fitznet.fitznetapi.service;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import io.micrometer.core.instrument.Counter;
+import io.micrometer.core.instrument.Timer;
+import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
 import java.util.List;
 import org.fitznet.fitznetapi.dto.requests.UpdateUserRequestDto;
+import org.fitznet.fitznetapi.metrics.FitzNetMetrics;
 import org.fitznet.fitznetapi.model.User;
 import org.fitznet.fitznetapi.repository.UserRepository;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -20,273 +29,226 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 class UserServiceTest {
 
   @Mock private UserRepository userRepository;
-
   @Mock private PasswordEncoder passwordEncoder;
 
-  @InjectMocks private UserService userService;
-
-  private AutoCloseable mocks;
+  private AutoCloseable closeable;
+  private SimpleMeterRegistry meterRegistry;
+  private UserService userService;
 
   @BeforeEach
-  public void setUp() {
-    mocks = MockitoAnnotations.openMocks(this);
+  void setUp() {
+    closeable = MockitoAnnotations.openMocks(this);
+    meterRegistry = new SimpleMeterRegistry();
+    userService = new UserService(userRepository, passwordEncoder, new FitzNetMetrics(meterRegistry));
   }
 
   @AfterEach
-  public void tearDown() throws Exception {
-    if (mocks != null) {
-      mocks.close();
-    }
+  void tearDown() throws Exception {
+    closeable.close();
+    meterRegistry.close();
   }
 
   @Test
-  void saveUserShouldSaveAndReturnUser() {
+  void shouldSaveUserAndRecordCreateMetrics() {
     User user =
-        User.builder()
-            .username("mattlol85")
-            .email("test@example.com")
-            .password("testPassword")
-            .build();
+        User.builder().username("testuser").password("password").email("test@example.com").build();
 
-    when(userRepository.save(any(User.class))).thenReturn(user);
+    when(passwordEncoder.encode("password")).thenReturn("encodedPassword");
+    when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
     User savedUser = userService.saveUser(user);
 
     assertNotNull(savedUser);
-    assertEquals("mattlol85", savedUser.getUsername());
+    assertEquals("testuser", savedUser.getUsername());
+    assertEquals("encodedPassword", savedUser.getPassword());
+    verify(passwordEncoder, times(1)).encode("password");
     verify(userRepository, times(1)).save(any(User.class));
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "create", "result", "success");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "create", "result", "success");
   }
 
   @Test
-  void deleteUserShouldDeleteUserByUsername() {
-    String username = "mattlol85";
+  void shouldAssignBoardColorWhenNotSet() {
+    User user =
+        User.builder().username("newuser").email("new@example.com").password("plainPass").build();
 
-    doNothing().when(userRepository).deleteByUsername(username);
+    when(passwordEncoder.encode(any())).thenReturn("$2a$10$hashed");
+    when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-    userService.deleteUser(username);
+    User saved = userService.saveUser(user);
 
-    verify(userRepository, times(1)).deleteByUsername(username);
+    assertNotNull(saved.getBoardColor());
+    assertTrue(saved.getBoardColor().matches("hsl\\(\\d+,72%,50%\\)"));
   }
 
   @Test
-  void readByUsernameShouldReturnUserWhenUserExists() {
-    String username = "mattlol85";
+  void shouldPreserveExistingBoardColor() {
     User user =
         User.builder()
-            .username(username)
-            .email("test@example.com")
-            .password("testPassword")
+            .username("existing")
+            .email("existing@example.com")
+            .password("plainPass")
+            .boardColor("hsl(42,72%,50%)")
             .build();
 
-    when(userRepository.findByUsername(username)).thenReturn(user);
+    when(passwordEncoder.encode(any())).thenReturn("$2a$10$hashed");
+    when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-    User foundUser = userService.readByUsername(username);
+    User saved = userService.saveUser(user);
+
+    assertEquals("hsl(42,72%,50%)", saved.getBoardColor());
+  }
+
+  @Test
+  void shouldDeleteUserAndRecordMetric() {
+    doNothing().when(userRepository).deleteByUsername("testuser");
+
+    userService.deleteUser("testuser");
+
+    verify(userRepository, times(1)).deleteByUsername("testuser");
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "delete", "result", "success");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "delete", "result", "success");
+  }
+
+  @Test
+  void shouldReadByUsernameWhenUserExists() {
+    User user =
+        User.builder().username("testuser").password("password").email("test@example.com").build();
+    when(userRepository.findByUsername("testuser")).thenReturn(user);
+
+    User foundUser = userService.readByUsername("testuser");
 
     assertNotNull(foundUser);
-    assertEquals(username, foundUser.getUsername());
-    verify(userRepository, times(1)).findByUsername(username);
+    assertEquals("testuser", foundUser.getUsername());
+    verify(userRepository, times(1)).findByUsername("testuser");
   }
 
   @Test
-  void readByUsernameShouldReturnNullWhenUserDoesNotExist() {
-    String username = "unknownUser";
+  void shouldReadByUsernameWhenUserDoesNotExist() {
+    when(userRepository.findByUsername("missinguser")).thenReturn(null);
 
-    when(userRepository.findByUsername(username)).thenReturn(null);
-
-    User foundUser = userService.readByUsername(username);
+    User foundUser = userService.readByUsername("missinguser");
 
     assertNull(foundUser);
-    verify(userRepository, times(1)).findByUsername(username);
+    verify(userRepository, times(1)).findByUsername("missinguser");
   }
 
   @Test
-  void updateUserShouldUpdateUsernameWhenUserExists() {
-    String oldUsername = "mattlol85";
-    String newUsername = "mattnew85";
-    User user =
+  void shouldUpdateUserAndRecordMetric() {
+    UpdateUserRequestDto updateRequest =
+        new UpdateUserRequestDto(
+            "testuser", "updateduser", "test@example.com", "updated@example.com", "newpassword");
+    User updatedUser =
         User.builder()
-            .username(newUsername)
-            .email("test@example.com")
-            .password("$2a$10$hashedPassword")
+            .username("updateduser")
+            .password("newpassword")
+            .email("updated@example.com")
             .build();
-    UpdateUserRequestDto updateUserRequestDto =
-        new UpdateUserRequestDto(oldUsername, newUsername, null, null, null);
+    when(userRepository.findAndModifyUser(updateRequest)).thenReturn(updatedUser);
 
-    when(userRepository.findAndModifyUser(updateUserRequestDto)).thenReturn(user);
-
-    User result = userService.updateUser(updateUserRequestDto);
+    User result = userService.updateUser(updateRequest);
 
     assertNotNull(result);
-    assertEquals(newUsername, result.getUsername());
-    verify(userRepository, times(1)).findAndModifyUser(updateUserRequestDto);
+    assertEquals("updateduser", result.getUsername());
+    assertEquals("updated@example.com", result.getEmail());
+    verify(userRepository, times(1)).findAndModifyUser(updateRequest);
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "update", "result", "success");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "update", "result", "success");
   }
 
   @Test
-  void updateUserShouldUpdatePasswordWhenUserExists() {
-    String username = "mattlol85";
-    String newPassword = "newPassword123";
-    User user =
-        User.builder()
-            .username(username)
-            .email("test@example.com")
-            .password("$2a$10$newHashedPassword")
-            .build();
-    UpdateUserRequestDto updateUserRequestDto =
-        new UpdateUserRequestDto(username, null, null, null, newPassword);
+  void shouldReturnNullWhenUserDoesNotExistOnUpdateAndRecordMetric() {
+    UpdateUserRequestDto updateRequest =
+        new UpdateUserRequestDto("missinguser", null, null, null, null);
+    when(userRepository.findAndModifyUser(updateRequest)).thenReturn(null);
 
-    when(userRepository.findAndModifyUser(updateUserRequestDto)).thenReturn(user);
-
-    User result = userService.updateUser(updateUserRequestDto);
-
-    assertNotNull(result);
-    verify(userRepository, times(1)).findAndModifyUser(updateUserRequestDto);
-  }
-
-  @Test
-  void updateUserShouldReturnNullWhenUserDoesNotExist() {
-    String oldUsername = "unknownUser";
-    String newUsername = "newUser";
-    UpdateUserRequestDto updateUserRequestDto =
-        new UpdateUserRequestDto(oldUsername, newUsername, null, null, null);
-
-    when(userRepository.findAndModifyUser(updateUserRequestDto)).thenReturn(null);
-
-    User result = userService.updateUser(updateUserRequestDto);
+    User result = userService.updateUser(updateRequest);
 
     assertNull(result);
-    verify(userRepository, times(1)).findAndModifyUser(updateUserRequestDto);
+    verify(userRepository, times(1)).findAndModifyUser(updateRequest);
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "update", "result", "no_update");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "update", "result", "no_update");
   }
 
   @Test
-  void verifyPasswordShouldReturnTrueWhenPasswordMatches() {
-    String username = "mattlol85";
-    String rawPassword = "testPassword123";
+  void shouldVerifyPasswordWhenPasswordMatchesAndRecordMetric() {
     User user =
         User.builder()
-            .username(username)
+            .username("testuser")
+            .password("encodedPassword")
             .email("test@example.com")
-            .password("$2a$10$hashedPassword")
             .build();
+    when(userRepository.findByUsername("testuser")).thenReturn(user);
+    when(passwordEncoder.matches("password", "encodedPassword")).thenReturn(true);
 
-    when(userRepository.findByUsername(username)).thenReturn(user);
-    when(passwordEncoder.matches(rawPassword, "$2a$10$hashedPassword")).thenReturn(true);
+    boolean isMatch = userService.verifyPassword("testuser", "password");
 
-    boolean result = userService.verifyPassword(username, rawPassword);
-
-    assertTrue(result);
-    verify(userRepository, times(1)).findByUsername(username);
-    verify(passwordEncoder, times(1)).matches(rawPassword, "$2a$10$hashedPassword");
+    assertTrue(isMatch);
+    verify(userRepository, times(1)).findByUsername("testuser");
+    verify(passwordEncoder, times(1)).matches("password", "encodedPassword");
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "login", "result", "success");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "login", "result", "success");
   }
 
   @Test
-  void verifyPasswordShouldReturnFalseWhenPasswordDoesNotMatch() {
-    String username = "mattlol85";
-    String rawPassword = "wrongPassword";
+  void shouldReturnFalseWhenPasswordDoesNotMatchAndRecordMetric() {
     User user =
         User.builder()
-            .username(username)
+            .username("testuser")
+            .password("encodedPassword")
             .email("test@example.com")
-            .password("$2a$10$hashedPassword")
             .build();
+    when(userRepository.findByUsername("testuser")).thenReturn(user);
+    when(passwordEncoder.matches("wrongPassword", "encodedPassword")).thenReturn(false);
 
-    when(userRepository.findByUsername(username)).thenReturn(user);
-    when(passwordEncoder.matches(rawPassword, "$2a$10$hashedPassword")).thenReturn(false);
+    boolean isMatch = userService.verifyPassword("testuser", "wrongPassword");
 
-    boolean result = userService.verifyPassword(username, rawPassword);
-
-    assertFalse(result);
-    verify(userRepository, times(1)).findByUsername(username);
-    verify(passwordEncoder, times(1)).matches(rawPassword, "$2a$10$hashedPassword");
+    assertFalse(isMatch);
+    verify(userRepository, times(1)).findByUsername("testuser");
+    verify(passwordEncoder, times(1)).matches("wrongPassword", "encodedPassword");
+    assertCounterCount(
+        "fitznet.user.operations", 1.0, "operation", "login", "result", "invalid_credentials");
+    assertTimerCount(
+        "fitznet.user.operation", 1L, "operation", "login", "result", "invalid_credentials");
   }
 
   @Test
-  void verifyPasswordShouldReturnFalseWhenUserDoesNotExist() {
-    String username = "unknownUser";
-    String rawPassword = "testPassword123";
+  void shouldReturnFalseWhenUserDoesNotExistAndRecordMetric() {
+    when(userRepository.findByUsername("missinguser")).thenReturn(null);
 
-    when(userRepository.findByUsername(username)).thenReturn(null);
+    boolean isMatch = userService.verifyPassword("missinguser", "password");
 
-    boolean result = userService.verifyPassword(username, rawPassword);
-
-    assertFalse(result);
-    verify(userRepository, times(1)).findByUsername(username);
-    verify(passwordEncoder, times(0)).matches(any(), any());
+    assertFalse(isMatch);
+    verify(userRepository, times(1)).findByUsername("missinguser");
+    assertCounterCount("fitznet.user.operations", 1.0, "operation", "login", "result", "user_not_found");
+    assertTimerCount("fitznet.user.operation", 1L, "operation", "login", "result", "user_not_found");
   }
 
   @Test
-  void findAllsShouldReturnListOfUsers() {
-    User user =
-        User.builder()
-            .username("mattlol85")
-            .email("test@example.com")
-            .password("testPassword")
-            .build();
-
-    when(userRepository.findAll()).thenReturn(Collections.singletonList(user));
+  void shouldReturnAllUsers() {
+    User user1 =
+        User.builder().username("user1").password("password1").email("user1@example.com").build();
+    User user2 =
+        User.builder().username("user2").password("password2").email("user2@example.com").build();
+    when(userRepository.findAll()).thenReturn(List.of(user1, user2));
 
     List<User> users = userService.findAll();
 
-    assertNotNull(users);
-    assertEquals(1, users.size());
-    assertEquals("mattlol85", users.getFirst().getUsername());
+    assertEquals(2, users.size());
+    assertEquals("user1", users.get(0).getUsername());
+    assertEquals("user2", users.get(1).getUsername());
     verify(userRepository, times(1)).findAll();
   }
 
-  @Test
-  void saveUserShouldAssignBoardColorWhenNotSet() {
-    User user = User.builder()
-        .username("newuser")
-        .email("new@example.com")
-        .password("plainPass")
-        .build(); // boardColor is null
-
-    when(passwordEncoder.encode(any())).thenReturn("$2a$10$hashed");
-    when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
-
-    User saved = userService.saveUser(user);
-
-    assertNotNull(saved.getBoardColor(), "boardColor should be auto-assigned");
-    assertTrue(saved.getBoardColor().startsWith("hsl("),
-        "boardColor should be an hsl() value, got: " + saved.getBoardColor());
+  private void assertCounterCount(String name, double expectedCount, String... tags) {
+    Counter counter = meterRegistry.find(name).tags(tags).counter();
+    assertNotNull(counter);
+    assertEquals(expectedCount, counter.count());
   }
 
-  @Test
-  void saveUserShouldPreserveExistingBoardColor() {
-    User user = User.builder()
-        .username("existing")
-        .email("existing@example.com")
-        .password("plainPass")
-        .boardColor("hsl(42,72%,50%)")
-        .build();
-
-    when(passwordEncoder.encode(any())).thenReturn("$2a$10$hashed");
-    when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
-
-    User saved = userService.saveUser(user);
-
-    assertEquals("hsl(42,72%,50%)", saved.getBoardColor(),
-        "Existing boardColor should not be overwritten");
-  }
-
-  @Test
-  void generatedBoardColorShouldBeWithinExpectedHslRange() {
-    // Run multiple times to validate the format is always valid hsl()
-    for (int i = 0; i < 20; i++) {
-      User user = User.builder()
-          .username("user" + i)
-          .email("u" + i + "@example.com")
-          .password("pass")
-          .build();
-
-      when(passwordEncoder.encode(any())).thenReturn("$2a$10$hashed");
-      when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
-
-      User saved = userService.saveUser(user);
-      String color = saved.getBoardColor();
-
-      assertNotNull(color);
-      assertTrue(color.matches("hsl\\(\\d+,72%,50%\\)"),
-          "Color '" + color + "' should match hsl(H,72%,50%)");
-    }
+  private void assertTimerCount(String name, long expectedCount, String... tags) {
+    Timer timer = meterRegistry.find(name).tags(tags).timer();
+    assertNotNull(timer);
+    assertEquals(expectedCount, timer.count());
   }
 }
